# AI-IMAGE

./: .gitignore  README.md  prd.md  start-dev.sh
backend/: .env.example  nixpacks.toml  pyproject.toml
backend/ai_image_demo_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/app/: auth.py  dependencies.py  errors.py  factory.py  main.py  schemas.py  settings.py
backend/app/routers/: account.py  process_image.py
backend/app/services/: provider.py  usage_store.py
backend/tests/: conftest.py  helpers.py  test_process_image.py  test_settings.py
frontend/: .env.example  middleware.ts  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/ai-image/: page.tsx
frontend/app/api/account/: route.ts
frontend/app/api/login/: route.ts
frontend/app/api/logout/: route.ts
frontend/app/api/process-image/: route.ts
frontend/app/login/: page.tsx
frontend/lib/: auth.ts  hosts.ts
test/: prompt.md
